# cmp_search

./: .gitignore  .prettierignore  README.md  docker-compose-elastic.yml  docker-compose-logstash.yml  logstash.env
api/: .env  .env.dev  .env.prod  README.md  pyproject.toml
api/src/es/: main.py
api/src/es/clients/: elasticsearch_client.py
api/src/es/config/: logging.py  settings.py
api/src/es/models/: search.py
api/src/es/routes/: search.py
api/src/es/services/: search_service.py
config/: jvm.options
elasticsearch/: README.md  docker-compose-elastic.yml  elastic.env
logstash/: Dockerfile.logstash  README.md  docker-compose-logstash.yml  logstash.env
logstash/config/: logstash.yml
logstash/pipeline/: pipeline.conf
logstash/sample_data/: test.json
logstash/templates/: search-count-update-script.json  search-item-template.json
logstash_data/: test.json
pipeline/: pipeline.conf
scripts/: generate-certs.sh
shared/scripts/: generate-certs.sh
templates/: search-item-template.json
