[tool.poetry]
name = "api"
version = "0.1.0"
description = "API project for Elasticsearch"
authors = ["Prasad Muddappa <prasadcoorgi@yahoo.com>"]
readme = "README.md"
packages = [{ include = "es", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
elasticsearch = { version = ">=9.0.1,<10.0.0", extras = ["async"] }
pydantic = ">=2.11.4,<3.0.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pytest = "^7.4.0"
httpx = "^0.25.0"

[tool.poetry.scripts]
start = "es.main:start"
dev = "uvicorn:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"